--- a/ini_generator/templates/choose.html
+++ b/ini_generator/templates/choose.html
@@ -14,13 +14,21 @@
 		<form method="POST">
 			<br>
 			<h4> Enter Friendly Name </h4>
-				 {% for name in value_dict %}
-				 <div class="">
-					<label  style="font-weight:300;" >{{ name }}</label>
-					<input class="form-control" placeholder="Friendly Name" type="text" name={{name}}>
-
-				 </div>
-				 {% endfor %}
+			{% for myname, val in names %}
+			{% if '#' in myname %}
+				{% set name = myname.split('#') %}
+				<div class="">
+					<label style="font-weight: 300;">{{ name[0] }} / {{ name[1] }}</label>
+					<input class="form-control" placeholder={{name[1]}} type="text" name={{name[1]}}>
+				</div>
+			{% else %}
+				<div class="">
+					<label style="font-weight: 300;">Tables / {{ myname }}</label>
+					<input class="form-control" placeholder={{myname}} type="text" name={{myname}}>
+				</div>
+			{% endif %}
+		{% endfor %}
+		
 				 <br>
 </div>
 				<p style="font-weight:300;" > ** Note: If you didn't put any alternative Friendly Names the current name will be considered the Friendly Name</p>
