--- a/ini_generator/templates/index.html
+++ b/ini_generator/templates/index.html
@@ -8,6 +8,7 @@
     </head>
 
 <body class="body">
+  <h1>Admin</h1>
   <div class="container my-5 allitem w-50">
 		<div class="d-flex align-items-center">
   <form method="post">
