--- a/ini_generator/templates/page2.html
+++ b/ini_generator/templates/page2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
   </head>
   <body class="body">
+    <h1>Admin</h1>
     <div class="container my-5 allitem w-50">
       <div class="d-flex align-items-center">
     <form method="post">
